# mlflow-model-management

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
src/model/: grid_search.py  randomized_search.py  train.py  train_autolog.py
