[tool.poetry]
name = "model"
version = "0.0.1"
description = ""
authors = ["Ludwik Bielczynski <ludwik.bielczynski@gmail.com>"]
readme = "README.md"
packages = [{ include = "model", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"

mlflow = "^2.19.0"
psutil = "^6.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = "^24.8.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
